--- a/labs/lab12/configs/R15.cfg
+++ b/labs/lab12/configs/R15.cfg
@@ -109,10 +109,12 @@ router bgp 1001
  network 10.0.0.22 mask 255.255.255.254
  redistribute connected
  neighbor 10.0.0.13 remote-as 301
+ neighbor 10.0.0.13 filter-list 1 out
  neighbor 10.0.0.46 remote-as 1001
 !
 ip forward-protocol nd
 !
+ip as-path access-list 1 permit ^$
 !
 no ip http server
 no ip http secure-server
