--- a/labs/lab12/configs/R18.cfg
+++ b/labs/lab12/configs/R18.cfg
@@ -1,7 +1,5 @@
 
 !
-! Last configuration change at 06:13:00 UTC Wed Dec 13 2023
-!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -94,7 +92,9 @@ router bgp 2042
  network 10.0.0.22 mask 255.255.255.254
  redistribute connected
  neighbor 10.0.0.23 remote-as 520
+ neighbor 10.0.0.23 prefix-list NO-TRANSIT out
  neighbor 10.0.0.25 remote-as 520
+ neighbor 10.0.0.25 prefix-list NO-TRANSIT out
  maximum-paths 2
 !
 ip forward-protocol nd
@@ -103,6 +103,10 @@ ip forward-protocol nd
 no ip http server
 no ip http secure-server
 !
+!
+ip prefix-list NO-TRANSIT seq 5 permit 10.0.0.16/31
+ip prefix-list NO-TRANSIT seq 10 permit 10.0.0.22/31
+ip prefix-list NO-TRANSIT seq 20 permit 10.0.0.24/31
 !
 !
 !
