--- a/labs/lab12/configs/R21.cfg
+++ b/labs/lab12/configs/R21.cfg
@@ -1,7 +1,5 @@
 
 !
-! Last configuration change at 05:33:23 UTC Tue Dec 12 2023
-!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -101,17 +99,31 @@ interface Ethernet1/3
 !
 router bgp 301
  bgp log-neighbor-changes
+ network 0.0.0.0
  redistribute connected
  neighbor 10.0.0.12 remote-as 1001
+ neighbor 10.0.0.12 route-map TO_AS1001 out
  neighbor 10.0.0.27 remote-as 101
  neighbor 10.0.0.29 remote-as 520
 !
 ip forward-protocol nd
 !
+ip as-path access-list 1 permit _2042$
 !
 no ip http server
 no ip http secure-server
+ip route 0.0.0.0 0.0.0.0 Null0
 !
+!
+ip prefix-list DEF_R seq 10 permit 0.0.0.0/0
+!
+route-map TO_AS1001 permit 10
+ match as-path 1
+!
+route-map TO_AS1001 permit 20
+ match ip address prefix-list DEF_R
+!
+route-map TO_AS1001 deny 100
 !
 !
 !
