--- a/labs/lab12/configs/R14.cfg
+++ b/labs/lab12/configs/R14.cfg
@@ -1,7 +1,5 @@
 
 !
-! Last configuration change at 05:20:50 UTC Tue Dec 12 2023
-!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -112,10 +110,12 @@ router bgp 1001
  neighbor 10.0.0.9 remote-as 101
  neighbor 10.0.0.9 route-map ebgp_in in
  neighbor 10.0.0.9 route-map ebgp_out out
+ neighbor 10.0.0.9 filter-list 1 out
  neighbor 10.0.0.47 remote-as 1001
 !
 ip forward-protocol nd
 !
+ip as-path access-list 1 permit ^$
 !
 no ip http server
 no ip http secure-server
