--- a/labs/lab12/configs/R22.cfg
+++ b/labs/lab12/configs/R22.cfg
@@ -1,7 +1,5 @@
 
 !
-! Last configuration change at 03:55:08 UTC Tue Dec 12 2023
-!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -101,8 +99,11 @@ interface Ethernet1/3
 !
 router bgp 101
  bgp log-neighbor-changes
+ network 0.0.0.0
  redistribute connected
  neighbor 10.0.0.8 remote-as 1001
+ neighbor 10.0.0.8 default-originate
+ neighbor 10.0.0.8 prefix-list DEF_R out
  neighbor 10.0.0.26 remote-as 301
  neighbor 10.0.0.31 remote-as 520
 !
@@ -111,7 +112,10 @@ ip forward-protocol nd
 !
 no ip http server
 no ip http secure-server
+ip route 0.0.0.0 0.0.0.0 Null0
 !
+!
+ip prefix-list DEF_R seq 10 permit 0.0.0.0/0
 !
 !
 !
