lab11 fix R26.cfg

--- a/labs/lab11/configs/R26.cfg
+++ b/labs/lab11/configs/R26.cfg
@@ -1,13 +1,13 @@
 
 !
-! Last configuration change at 04:05:25 UTC Sun Dec 10 2023
+! Last configuration change at 06:14:24 UTC Wed Dec 13 2023
 !
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
-hostname R25
+hostname R26
 !
 boot-start-marker
 boot-end-marker
@@ -62,27 +62,24 @@ redundancy
 !
 !
 !
-interface Loopback1
- no shutdown
- ip address 10.1.0.25 255.255.255.255
-!
 interface Ethernet0/0
  no shutdown
- ip address 10.0.0.33 255.255.255.254
+ ip address 10.0.0.37 255.255.255.254
  ip router isis
 !
 interface Ethernet0/1
  no shutdown
- ip address 10.0.0.38 255.255.255.254
+ ip address 10.0.0.44 255.255.255.254
+ ip router isis
 !
 interface Ethernet0/2
  no shutdown
- ip address 10.0.0.40 255.255.255.254
+ ip address 10.0.0.41 255.255.255.254
  ip router isis
 !
 interface Ethernet0/3
  no shutdown
- ip address 10.0.0.42 255.255.255.254
+ ip address 10.0.0.25 255.255.255.254
 !
 interface Ethernet1/0
  no shutdown
@@ -105,24 +102,26 @@ interface Ethernet1/3
  shutdown
 !
 router isis
- net 49.2222.0000.0000.0025.00
- redistribute connected
+ net 49.0026.0000.0000.0026.00
+ redistribute static ip route-map chok
 !
 router bgp 520
  bgp log-neighbor-changes
- network 10.0.0.39
- redistribute connected
- neighbor 10.0.0.32 remote-as 520
- neighbor 10.0.0.41 remote-as 520
- neighbor 10.1.0.24 remote-as 520
- neighbor 10.1.0.24 update-source Loopback1
+ network 192.168.102.0
+ neighbor 10.0.0.24 remote-as 2042
+ neighbor 10.0.0.36 remote-as 520
+ neighbor 10.0.0.40 remote-as 520
 !
 ip forward-protocol nd
 !
 !
 no ip http server
 no ip http secure-server
+ip route 192.168.102.0 255.255.255.0 10.0.0.45 tag 110
 !
+!
+route-map chok permit 10
+ match tag 110
 !
 !
 !
