--- a/labs/lab14/configs/R12.cfg
+++ b/labs/lab14/configs/R12.cfg
@@ -1,6 +1,7 @@
 
 !
-! Last configuration change at 11:04:14 UTC Sun Dec 17 2023
+! Last configuration change at 17:58:41 UTC Thu Jan 11 2024
+! NVRAM config last updated at 11:04:13 UTC Fri Jan 12 2024
 !
 version 15.2
 service timestamps debug datetime msec
@@ -22,6 +23,18 @@ no aaa new-model
 !
 !
 !
+ip dhcp excluded-address 192.168.100.1 192.168.100.9
+ip dhcp excluded-address 192.168.100.129 192.168.100.137
+!
+ip dhcp pool pool_vpc1
+ network 192.168.100.0 255.255.255.128
+ default-router 192.168.100.1
+ lease 0 0 30
+!
+ip dhcp pool pool_vpc7
+ network 192.168.100.128 255.255.255.128
+ default-router 192.168.100.129
+ lease 0 0 30
 !
 !
 ip cef
@@ -87,6 +100,7 @@ interface Vlan10
  standby version 2
  standby 1 ip 192.168.100.1
  standby 1 preempt
+ ntp broadcast
 !
 interface Vlan20
  no shutdown
@@ -94,6 +108,7 @@ interface Vlan20
  standby version 2
  standby 2 ip 192.168.100.129
  standby 2 preempt
+ ntp broadcast
 !
 interface Vlan40
  no shutdown
@@ -101,6 +116,7 @@ interface Vlan40
  standby version 2
  standby 3 ip 172.16.100.1
  standby 3 preempt
+ ntp broadcast
 !
 router ospf 1
  area 10 stub
@@ -124,5 +140,6 @@ line aux 0
 line vty 0 4
  login
 !
+ntp master 2
 !
 end
