--- a/labs/lab14/configs/R13.cfg
+++ b/labs/lab14/configs/R13.cfg
@@ -1,6 +1,7 @@
 
 !
-! Last configuration change at 11:04:08 UTC Sun Dec 17 2023
+! Last configuration change at 18:02:57 UTC Thu Jan 11 2024
+! NVRAM config last updated at 11:04:11 UTC Fri Jan 12 2024
 !
 version 15.2
 service timestamps debug datetime msec
@@ -22,6 +23,18 @@ no aaa new-model
 !
 !
 !
+ip dhcp excluded-address 192.168.100.1 192.168.100.9
+ip dhcp excluded-address 192.168.100.129 192.168.100.137
+!
+ip dhcp pool pool_vpc1
+ network 192.168.100.0 255.255.255.128
+ default-router 192.168.100.1
+ lease 0 0 30
+!
+ip dhcp pool pool_vpc7
+ network 192.168.100.128 255.255.255.128
+ default-router 192.168.100.129
+ lease 0 0 30
 !
 !
 ip cef
@@ -87,21 +100,22 @@ interface Vlan10
  standby version 2
  standby 1 ip 192.168.100.1
  standby 1 preempt
+ ntp broadcast
 !
 interface Vlan20
  no shutdown
  ip address 192.168.100.131 255.255.255.128
  standby version 2
- standby 0 preempt
  standby 2 ip 192.168.100.129
  standby 2 preempt
+ ntp broadcast
 !
 interface Vlan40
  no shutdown
  ip address 172.16.100.3 255.255.255.0
  standby version 2
- standby 0 preempt
  standby 3 ip 172.16.100.1
+ ntp broadcast
 !
 router ospf 1
  area 10 stub
@@ -125,5 +139,6 @@ line aux 0
 line vty 0 4
  login
 !
+ntp master 2
 !
 end
