--- a/labs/lab14/configs/R14.cfg
+++ b/labs/lab14/configs/R14.cfg
@@ -1,5 +1,7 @@
 
 !
+! Last configuration change at 03:59:54 UTC Tue Jan 9 2024
+!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -31,6 +33,7 @@ mmi snmp-timeout 180
 !
 !
 !
+no ip domain lookup
 ip cef
 no ipv6 cef
 !
@@ -63,6 +66,8 @@ redundancy
 interface Ethernet0/0
  no shutdown
  ip address 10.0.0.1 255.255.255.254
+ ip nat inside
+ ip virtual-reassembly in
  ip ospf 1 area 10
 !
 interface Ethernet0/1
@@ -73,6 +78,8 @@ interface Ethernet0/1
 interface Ethernet0/2
  no shutdown
  ip address 10.0.0.8 255.255.255.254
+ ip nat outside
+ ip virtual-reassembly in
 !
 interface Ethernet0/3
  no shutdown
@@ -82,6 +89,8 @@ interface Ethernet0/3
 interface Ethernet1/0
  no shutdown
  ip address 10.0.0.46 255.255.255.254
+ ip nat inside
+ ip virtual-reassembly in
  ip ospf 1 area 0
 !
 interface Ethernet1/1
@@ -106,6 +115,7 @@ router ospf 1
 router bgp 1001
  bgp log-neighbor-changes
  network 10.0.0.8 mask 255.255.255.254
+ network 10.10.0.1 mask 255.255.255.255
  redistribute connected
  neighbor 10.0.0.9 remote-as 101
  neighbor 10.0.0.9 route-map ebgp_in in
@@ -119,6 +129,9 @@ ip as-path access-list 1 permit ^$
 !
 no ip http server
 no ip http secure-server
+ip nat pool POOL_NAT_AS1001 10.10.0.1 10.10.0.1 prefix-length 24
+ip nat inside source list 100 pool POOL_NAT_AS1001 overload
+ip route 10.10.0.1 255.255.255.255 Null0
 !
 !
 route-map ebgp_out permit 20
@@ -128,6 +141,8 @@ route-map ebgp_in permit 20
  set local-preference 50
 !
 !
+access-list 100 permit ip host 10.0.0.2 any
+access-list 100 permit ip 10.0.0.0 0.255.255.255 any
 !
 control-plane
 !
