--- a/labs/lab14/configs/R15.cfg
+++ b/labs/lab14/configs/R15.cfg
@@ -1,5 +1,7 @@
 
 !
+! Last configuration change at 04:44:14 UTC Thu Jan 11 2024
+!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -68,20 +70,28 @@ interface Ethernet0/0
 interface Ethernet0/1
  no shutdown
  ip address 10.0.0.3 255.255.255.254
+ ip nat inside
+ ip virtual-reassembly in
  ip ospf 1 area 10
 !
 interface Ethernet0/2
  no shutdown
  ip address 10.0.0.12 255.255.255.254
+ ip nat outside
+ ip virtual-reassembly in
 !
 interface Ethernet0/3
  no shutdown
  ip address 10.0.0.14 255.255.255.254
+ ip nat inside
+ ip virtual-reassembly in
  ip ospf 1 area 102
 !
 interface Ethernet1/0
  no shutdown
  ip address 10.0.0.47 255.255.255.254
+ ip nat inside
+ ip virtual-reassembly in
  ip ospf 1 area 0
 !
 interface Ethernet1/1
@@ -107,9 +117,13 @@ router bgp 1001
  bgp log-neighbor-changes
  network 10.0.0.22
  network 10.0.0.22 mask 255.255.255.254
+ network 10.10.0.1 mask 255.255.255.255
+ network 10.10.0.2 mask 255.255.255.255
+ network 10.10.0.3 mask 255.255.255.255
  redistribute connected
  neighbor 10.0.0.13 remote-as 301
  neighbor 10.0.0.13 filter-list 1 out
+ neighbor 10.0.0.15 remote-as 1001
  neighbor 10.0.0.46 remote-as 1001
 !
 ip forward-protocol nd
@@ -118,12 +132,21 @@ ip as-path access-list 1 permit ^$
 !
 no ip http server
 no ip http secure-server
+ip nat pool POOL_NAT_AS1001 10.10.0.1 10.10.0.1 prefix-length 24
+ip nat inside source list 100 pool POOL_NAT_AS1001 overload
+ip nat inside source static 10.0.0.15 10.10.0.2
+ip nat inside source static tcp 10.0.0.11 22 10.10.0.3 1922 extendable
+ip route 10.10.0.1 255.255.255.255 Null0
+ip route 10.10.0.2 255.255.255.255 Null0
+ip route 10.10.0.3 255.255.255.255 Null0
 !
 !
 ip prefix-list area_101 seq 5 deny 10.0.0.10/31
 ip prefix-list area_101 seq 10 permit 0.0.0.0/0 le 32
 !
 !
+access-list 100 permit ip host 10.0.0.2 any
+access-list 110 permit ip host 10.0.0.11 any
 !
 control-plane
 !
