--- a/labs/lab14/configs/R18.cfg
+++ b/labs/lab14/configs/R18.cfg
@@ -1,5 +1,7 @@
 
 !
+! Last configuration change at 09:58:10 UTC Tue Jan 9 2024
+!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -63,18 +65,26 @@ redundancy
 interface Ethernet0/0
  no shutdown
  ip address 10.0.0.17 255.255.255.254
+ ip nat inside
+ ip virtual-reassembly in
 !
 interface Ethernet0/1
  no shutdown
  ip address 10.0.0.21 255.255.255.254
+ ip nat inside
+ ip virtual-reassembly in
 !
 interface Ethernet0/2
  no shutdown
  ip address 10.0.0.22 255.255.255.254
+ ip nat outside
+ ip virtual-reassembly in
 !
 interface Ethernet0/3
  no shutdown
  ip address 10.0.0.24 255.255.255.254
+ ip nat outside
+ ip virtual-reassembly in
 !
 !
 router eigrp SPB
@@ -90,6 +100,11 @@ router eigrp SPB
 router bgp 2042
  bgp log-neighbor-changes
  network 10.0.0.22 mask 255.255.255.254
+ network 10.10.1.1 mask 255.255.255.255
+ network 10.10.1.2 mask 255.255.255.255
+ network 10.10.1.3 mask 255.255.255.255
+ network 10.10.1.4 mask 255.255.255.255
+ network 10.10.1.5 mask 255.255.255.255
  redistribute connected
  neighbor 10.0.0.23 remote-as 520
  neighbor 10.0.0.23 prefix-list NO-TRANSIT out
@@ -102,13 +117,26 @@ ip forward-protocol nd
 !
 no ip http server
 no ip http secure-server
+ip nat pool POOL_NAT_AS2042 10.10.1.1 10.10.1.5 prefix-length 24
+ip nat inside source list 100 pool POOL_NAT_AS2042 overload
+ip route 10.10.1.1 255.255.255.255 Null0
+ip route 10.10.1.2 255.255.255.255 Null0
+ip route 10.10.1.3 255.255.255.255 Null0
+ip route 10.10.1.4 255.255.255.255 Null0
+ip route 10.10.1.5 255.255.255.255 Null0
 !
 !
 ip prefix-list NO-TRANSIT seq 5 permit 10.0.0.16/31
 ip prefix-list NO-TRANSIT seq 10 permit 10.0.0.22/31
 ip prefix-list NO-TRANSIT seq 20 permit 10.0.0.24/31
+ip prefix-list NO-TRANSIT seq 25 permit 10.10.1.1/32
+ip prefix-list NO-TRANSIT seq 30 permit 10.10.1.2/32
+ip prefix-list NO-TRANSIT seq 35 permit 10.10.1.3/32
+ip prefix-list NO-TRANSIT seq 40 permit 10.10.1.4/32
+ip prefix-list NO-TRANSIT seq 45 permit 10.10.1.5/32
 !
 !
+access-list 100 permit ip host 10.0.0.20 any
 !
 control-plane
 !
