--- a/labs/lab14/configs/R19.cfg
+++ b/labs/lab14/configs/R19.cfg
@@ -1,5 +1,7 @@
 
 !
+! Last configuration change at 04:27:44 UTC Thu Jan 11 2024
+!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
