--- a/labs/lab14/configs/R20.cfg
+++ b/labs/lab14/configs/R20.cfg
@@ -1,5 +1,7 @@
 
 !
+! Last configuration change at 03:34:57 UTC Thu Jan 11 2024
+!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -81,6 +83,10 @@ interface Ethernet0/3
  shutdown
 !
 router ospf 1
+!
+router bgp 1001
+ bgp log-neighbor-changes
+ neighbor 10.0.0.14 remote-as 1001
 !
 ip forward-protocol nd
 !
