--- a/labs/lab14/configs/R28.cfg
+++ b/labs/lab14/configs/R28.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 11:25:41 UTC Mon Oct 30 2023
+! Last configuration change at 11:03:37 UTC Fri Jan 12 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -71,14 +71,20 @@ track 20 ip sla 2 reachability
 interface Ethernet0/0
  no shutdown
  ip address 10.0.0.45 255.255.255.254
+ ip nat outside
+ ip virtual-reassembly in
 !
 interface Ethernet0/1
  no shutdown
  ip address 10.0.0.43 255.255.255.254
+ ip nat outside
+ ip virtual-reassembly in
 !
 interface Ethernet0/2
  no shutdown
  no ip address
+ ip nat inside
+ ip virtual-reassembly in
 !
 interface Ethernet0/2.10
  no shutdown
@@ -96,6 +102,8 @@ interface Ethernet0/2.40
  no shutdown
  encapsulation dot1Q 40
  ip address 172.16.102.1 255.255.255.0
+ ip nat inside
+ ip virtual-reassembly in
 !
 interface Ethernet0/3
  no shutdown
@@ -127,8 +135,10 @@ ip forward-protocol nd
 !
 no ip http server
 no ip http secure-server
+ip nat inside source static 172.16.102.10 10.10.2.1
 ip route 0.0.0.0 0.0.0.0 10.0.0.42
 ip route 0.0.0.0 0.0.0.0 10.0.0.44
+ip route 10.10.2.1 255.255.255.255 Null0
 !
 ip sla 1
  icmp-echo 10.0.0.42
