--- a/labs/lab16/configs/R18.cfg
+++ b/labs/lab16/configs/R18.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 14:29:39 UTC Fri Jan 19 2024
+! Last configuration change at 10:17:48 UTC Mon Mar 11 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -44,18 +44,47 @@ multilink bundle-name authenticated
 !
 !
 !
+crypto pki trustpoint VPN
+ enrollment url http://10.0.0.46:80
+ subject-name CN=R18,OU=VPN,O=SPB,C=RU
+ revocation-check none
+ rsakeypair VPN
 !
+!
+crypto pki certificate chain VPN
+ certificate 03 nvram:CA#3.cer
+ certificate ca 01 nvram:CA#1CA.cer
 !
 redundancy
 !
 !
 !
 !
+crypto ikev2 proposal PH1
+ encryption aes-cbc-128
+ integrity sha256
+ group 2
+!
+crypto ikev2 policy IK2POL
+ proposal PH1
+!
+!
+crypto ikev2 profile PROF1
+ match address local interface Ethernet0/2
+ match identity remote address 0.0.0.0
+ authentication remote rsa-sig
+ authentication local rsa-sig
+ pki trustpoint VPN
 !
 !
 !
+crypto ipsec transform-set IPSEC_TS esp-aes esp-sha256-hmac
+ mode transport
 !
 !
+crypto ipsec profile protect-gre
+ set transform-set IPSEC_TS
+ set ikev2-profile PROF1
 !
 !
 !
@@ -69,6 +98,7 @@ interface Tunnel0
  ip tcp adjust-mss 1360
  tunnel source 10.0.0.22
  tunnel destination 10.0.0.12
+ tunnel protection ipsec profile protect-gre
 !
 interface Ethernet0/0
  no shutdown
