--- a/labs/lab16/configs/R28.cfg
+++ b/labs/lab16/configs/R28.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 14:56:49 UTC Fri Jan 19 2024
+! Last configuration change at 08:24:06 UTC Tue Mar 12 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -44,7 +44,16 @@ multilink bundle-name authenticated
 !
 !
 !
+crypto pki trustpoint VPN
+ enrollment url http://10.0.0.46:80
+ subject-name CN=R28,OU=VPN,O=CHO,C=UR
+ revocation-check none
+ rsakeypair VPN
 !
+!
+crypto pki certificate chain VPN
+ certificate 07 nvram:CA#7.cer
+ certificate ca 01 nvram:CA#1CA.cer
 !
 redundancy
 !
@@ -57,16 +66,40 @@ track 20 ip sla 2 reachability
 !
 !
 !
+crypto ikev2 proposal PH1
+ encryption aes-cbc-128
+ integrity sha256
+ group 2
+!
+crypto ikev2 policy IK2POL
+ proposal PH1
+!
+!
+crypto ikev2 profile PROF1
+ match address local interface Loopback1
+ match identity remote address 0.0.0.0
+ authentication remote rsa-sig
+ authentication local rsa-sig
+ pki trustpoint VPN
+!
+!
+!
+crypto ipsec transform-set IPSEC_TS esp-aes esp-sha256-hmac
+ mode transport
+!
+!
+crypto ipsec profile protect-gre
+ set transform-set IPSEC_TS
+ set ikev2-profile PROF1
 !
 !
 !
 !
 !
 !
-!
-!
-!
-!
+interface Loopback1
+ no shutdown
+ ip address 10.1.0.28 255.255.255.255
 !
 interface Tunnel1
  no shutdown
@@ -79,8 +112,9 @@ interface Tunnel1
  ip nhrp network-id 100
  ip nhrp nhs 10.20.1.1
  ip tcp adjust-mss 1360
- tunnel source Ethernet0/0
+ tunnel source Loopback1
  tunnel mode gre multipoint
+ tunnel protection ipsec profile protect-gre
 !
 interface Ethernet0/0
  no shutdown
