--- a/labs/lab16/configs/R15.cfg
+++ b/labs/lab16/configs/R15.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 14:57:02 UTC Fri Jan 19 2024
+! Last configuration change at 08:22:41 UTC Tue Mar 12 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -44,18 +44,48 @@ multilink bundle-name authenticated
 !
 !
 !
+crypto pki trustpoint VPN
+ enrollment url http://10.0.0.46:80
+ subject-name CN=R15,OU=VPN,O=MSK,C=RU
+ revocation-check none
+ rsakeypair VPN
 !
+!
+crypto pki certificate chain VPN
+ certificate 02 nvram:CA#2.cer
+ certificate ca 01 nvram:CA#1CA.cer
 !
 redundancy
 !
 !
+ip ssh version 1
+!
+!
+crypto ikev2 proposal PH1
+ encryption aes-cbc-128
+ integrity sha256
+ group 2
+!
+crypto ikev2 policy IK2POL
+ proposal PH1
+!
+!
+crypto ikev2 profile PROF1
+ match address local interface Ethernet0/2
+ match identity remote address 0.0.0.0
+ authentication remote rsa-sig
+ authentication local rsa-sig
+ pki trustpoint VPN
 !
 !
 !
+crypto ipsec transform-set IPSEC_TS esp-aes esp-sha256-hmac
+ mode transport
 !
 !
-!
-!
+crypto ipsec profile protect-gre
+ set transform-set IPSEC_TS
+ set ikev2-profile PROF1
 !
 !
 !
@@ -69,6 +99,7 @@ interface Tunnel0
  ip tcp adjust-mss 1360
  tunnel source 10.0.0.12
  tunnel destination 10.0.0.22
+ tunnel protection ipsec profile protect-gre
 !
 interface Tunnel1
  no shutdown
@@ -81,6 +112,7 @@ interface Tunnel1
  ip tcp adjust-mss 1360
  tunnel source Ethernet0/2
  tunnel mode gre multipoint
+ tunnel protection ipsec profile protect-gre
 !
 interface Ethernet0/0
  no shutdown
