--- a/labs/lab16/configs/R27.cfg
+++ b/labs/lab16/configs/R27.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 15:05:30 UTC Fri Jan 19 2024
+! Last configuration change at 08:17:18 UTC Tue Mar 12 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -44,18 +44,47 @@ multilink bundle-name authenticated
 !
 !
 !
+crypto pki trustpoint VPN
+ enrollment url http://10.0.0.46:80
+ subject-name CN=R27,OU=VPN,O=LAB,C=UR
+ revocation-check none
+ rsakeypair VPN
 !
+!
+crypto pki certificate chain VPN
+ certificate 06 nvram:CA#6.cer
+ certificate ca 01 nvram:CA#1CA.cer
 !
 redundancy
 !
 !
 !
 !
+crypto ikev2 proposal PH1
+ encryption aes-cbc-128
+ integrity sha256
+ group 2
+!
+crypto ikev2 policy IK2POL
+ proposal PH1
+!
+!
+crypto ikev2 profile PROF1
+ match address local interface Ethernet0/0
+ match identity remote address 0.0.0.0
+ authentication remote rsa-sig
+ authentication local rsa-sig
+ pki trustpoint VPN
 !
 !
 !
+crypto ipsec transform-set IPSEC_TS esp-aes esp-sha256-hmac
+ mode transport
 !
 !
+crypto ipsec profile protect-gre
+ set transform-set IPSEC_TS
+ set ikev2-profile PROF1
 !
 !
 !
@@ -75,6 +104,7 @@ interface Tunnel1
  ip tcp adjust-mss 1360
  tunnel source Ethernet0/0
  tunnel mode gre multipoint
+ tunnel protection ipsec profile protect-gre
 !
 interface Ethernet0/0
  no shutdown
