--- a/labs/lab11/configs/R15.cfg
+++ b/labs/lab11/configs/R15.cfg
@@ -1,5 +1,7 @@
 
 !
+! Last configuration change at 11:57:18 UTC Sat Mar 23 2024
+!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -60,6 +62,11 @@ redundancy
 !
 !
 !
+interface Loopback1
+ no shutdown
+ ip address 10.1.0.15 255.255.255.255
+ ip ospf 1 area 10
+!
 interface Ethernet0/0
  no shutdown
  ip address 10.0.0.5 255.255.255.254
@@ -109,7 +116,8 @@ router bgp 1001
  network 10.0.0.22 mask 255.255.255.254
  redistribute connected
  neighbor 10.0.0.13 remote-as 301
- neighbor 10.0.0.46 remote-as 1001
+ neighbor 10.1.0.14 remote-as 1001
+ neighbor 10.1.0.14 update-source Loopback1
 !
 ip forward-protocol nd
 !
