--- a/labs/lab11/configs/R21.cfg
+++ b/labs/lab11/configs/R21.cfg
@@ -1,7 +1,5 @@
 
 !
-! Last configuration change at 05:33:23 UTC Tue Dec 12 2023
-!
 version 15.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
@@ -61,6 +59,10 @@ redundancy
 !
 !
 !
+!
+interface Loopback1
+ no shutdown
+ ip address 10.1.0.21 255.255.255.255
 !
 interface Ethernet0/0
  no shutdown
