--- a/labs/lab11/configs/R25.cfg
+++ b/labs/lab11/configs/R25.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 04:05:25 UTC Sun Dec 10 2023
+! Last configuration change at 07:03:28 UTC Mon Mar 25 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -65,6 +65,7 @@ redundancy
 interface Loopback1
  no shutdown
  ip address 10.1.0.25 255.255.255.255
+ ip router isis
 !
 interface Ethernet0/0
  no shutdown
@@ -106,14 +107,11 @@ interface Ethernet1/3
 !
 router isis
  net 49.2222.0000.0000.0025.00
- redistribute connected
 !
 router bgp 520
  bgp log-neighbor-changes
  network 10.0.0.39
  redistribute connected
- neighbor 10.0.0.32 remote-as 520
- neighbor 10.0.0.41 remote-as 520
  neighbor 10.1.0.24 remote-as 520
  neighbor 10.1.0.24 update-source Loopback1
 !
