--- a/labs/lab11/configs/R26.cfg
+++ b/labs/lab11/configs/R26.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 06:14:24 UTC Wed Dec 13 2023
+! Last configuration change at 11:32:49 UTC Wed Mar 27 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -62,6 +62,11 @@ redundancy
 !
 !
 !
+interface Loopback1
+ no shutdown
+ ip address 10.1.0.26 255.255.255.255
+ ip router isis
+!
 interface Ethernet0/0
  no shutdown
  ip address 10.0.0.37 255.255.255.254
@@ -108,9 +113,10 @@ router isis
 router bgp 520
  bgp log-neighbor-changes
  network 192.168.102.0
+ redistribute connected
  neighbor 10.0.0.24 remote-as 2042
- neighbor 10.0.0.36 remote-as 520
- neighbor 10.0.0.40 remote-as 520
+ neighbor 10.1.0.24 remote-as 520
+ neighbor 10.1.0.24 update-source Loopback1
 !
 ip forward-protocol nd
 !
