--- a/labs/lab11/configs/R14.cfg
+++ b/labs/lab11/configs/R14.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 05:20:50 UTC Tue Dec 12 2023
+! Last configuration change at 11:53:57 UTC Sat Mar 23 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -62,6 +62,11 @@ redundancy
 !
 !
 !
+interface Loopback1
+ no shutdown
+ ip address 10.1.0.14 255.255.255.255
+ ip ospf 1 area 10
+!
 interface Ethernet0/0
  no shutdown
  ip address 10.0.0.1 255.255.255.254
@@ -110,9 +115,9 @@ router bgp 1001
  network 10.0.0.8 mask 255.255.255.254
  redistribute connected
  neighbor 10.0.0.9 remote-as 101
- neighbor 10.0.0.9 route-map ebgp_in in
- neighbor 10.0.0.9 route-map ebgp_out out
- neighbor 10.0.0.47 remote-as 1001
+ neighbor 10.0.0.9 update-source Loopback1
+ neighbor 10.1.0.15 remote-as 1001
+ neighbor 10.1.0.15 update-source Loopback1
 !
 ip forward-protocol nd
 !
