--- a/labs/lab11/configs/R18.cfg
+++ b/labs/lab11/configs/R18.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 06:13:00 UTC Wed Dec 13 2023
+! Last configuration change at 06:08:42 UTC Mon Mar 25 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -61,6 +61,10 @@ redundancy
 !
 !
 !
+!
+interface Loopback1
+ no shutdown
+ ip address 10.1.0.18 255.255.255.255
 !
 interface Ethernet0/0
  no shutdown
