--- a/labs/lab11/configs/R22.cfg
+++ b/labs/lab11/configs/R22.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 03:55:08 UTC Tue Dec 12 2023
+! Last configuration change at 11:21:49 UTC Sat Mar 23 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -61,6 +61,10 @@ redundancy
 !
 !
 !
+!
+interface Loopback1
+ no shutdown
+ ip address 10.1.0.22 255.255.255.255
 !
 interface Ethernet0/0
  no shutdown
