--- a/labs/lab11/configs/R23.cfg
+++ b/labs/lab11/configs/R23.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 06:07:20 UTC Tue Dec 12 2023
+! Last configuration change at 11:31:33 UTC Wed Mar 27 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -62,6 +62,11 @@ redundancy
 !
 !
 !
+interface Loopback1
+ no shutdown
+ ip address 10.1.0.23 255.255.255.255
+ ip router isis
+!
 interface Ethernet0/0
  no shutdown
  ip address 10.0.0.31 255.255.255.254
@@ -103,13 +108,14 @@ interface Ethernet1/3
 !
 router isis
  net 49.2222.0000.0000.0023.00
- redistribute connected
 !
 router bgp 520
  bgp log-neighbor-changes
+ redistribute connected
  neighbor 10.0.0.30 remote-as 101
- neighbor 10.0.0.33 remote-as 520
- neighbor 10.0.0.35 remote-as 520
+ neighbor 10.0.0.30 update-source Loopback1
+ neighbor 10.1.0.24 remote-as 520
+ neighbor 10.1.0.24 update-source Loopback1
 !
 ip forward-protocol nd
 !
