--- a/labs/lab11/configs/R24.cfg
+++ b/labs/lab11/configs/R24.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 05:52:27 UTC Tue Dec 12 2023
+! Last configuration change at 06:58:13 UTC Mon Mar 25 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -65,6 +65,7 @@ redundancy
 interface Loopback1
  no shutdown
  ip address 10.1.0.24 255.255.255.255
+ ip router isis
 !
 interface Ethernet0/0
  no shutdown
@@ -106,21 +107,20 @@ interface Ethernet1/3
 !
 router isis
  net 49.0024.0000.0000.0024.00
- redistribute connected
 !
 router bgp 520
  bgp log-neighbor-changes
  network 10.0.0.30 mask 255.255.255.254
  redistribute connected
+ neighbor as520 peer-group
+ neighbor as520 remote-as 520
+ neighbor as520 update-source Loopback1
+ neighbor as520 route-reflector-client
  neighbor 10.0.0.22 remote-as 2042
  neighbor 10.0.0.28 remote-as 301
- neighbor 10.0.0.34 remote-as 520
- neighbor 10.0.0.34 route-reflector-client
- neighbor 10.0.0.37 remote-as 520
- neighbor 10.0.0.37 route-reflector-client
- neighbor 10.1.0.25 remote-as 520
- neighbor 10.1.0.25 update-source Loopback1
- neighbor 10.1.0.25 route-reflector-client
+ neighbor 10.1.0.23 peer-group as520
+ neighbor 10.1.0.25 peer-group as520
+ neighbor 10.1.0.26 peer-group as520
 !
 ip forward-protocol nd
 !
