lab11: - remove loopback source on eBGP - switch from redistribute connected to next-hop-self on iBGP AS520.

--- a/labs/lab11/configs/R23.cfg
+++ b/labs/lab11/configs/R23.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 11:31:33 UTC Wed Mar 27 2024
+! Last configuration change at 10:34:33 UTC Thu Apr 4 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -111,11 +111,10 @@ router isis
 !
 router bgp 520
  bgp log-neighbor-changes
- redistribute connected
  neighbor 10.0.0.30 remote-as 101
- neighbor 10.0.0.30 update-source Loopback1
  neighbor 10.1.0.24 remote-as 520
  neighbor 10.1.0.24 update-source Loopback1
+ neighbor 10.1.0.24 next-hop-self
 !
 ip forward-protocol nd
 !
