--- a/labs/lab11/configs/R24.cfg
+++ b/labs/lab11/configs/R24.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 06:58:13 UTC Mon Mar 25 2024
+! Last configuration change at 10:25:48 UTC Thu Apr 4 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -111,11 +111,11 @@ router isis
 router bgp 520
  bgp log-neighbor-changes
  network 10.0.0.30 mask 255.255.255.254
- redistribute connected
  neighbor as520 peer-group
  neighbor as520 remote-as 520
  neighbor as520 update-source Loopback1
  neighbor as520 route-reflector-client
+ neighbor as520 next-hop-self
  neighbor 10.0.0.22 remote-as 2042
  neighbor 10.0.0.28 remote-as 301
  neighbor 10.1.0.23 peer-group as520
