--- a/labs/lab11/configs/R25.cfg
+++ b/labs/lab11/configs/R25.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 07:03:28 UTC Mon Mar 25 2024
+! Last configuration change at 10:42:26 UTC Thu Apr 4 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -111,9 +111,9 @@ router isis
 router bgp 520
  bgp log-neighbor-changes
  network 10.0.0.39
- redistribute connected
  neighbor 10.1.0.24 remote-as 520
  neighbor 10.1.0.24 update-source Loopback1
+ neighbor 10.1.0.24 next-hop-self
 !
 ip forward-protocol nd
 !
