--- a/labs/lab11/configs/R26.cfg
+++ b/labs/lab11/configs/R26.cfg
@@ -1,6 +1,6 @@
 
 !
-! Last configuration change at 11:32:49 UTC Wed Mar 27 2024
+! Last configuration change at 10:42:16 UTC Thu Apr 4 2024
 !
 version 15.4
 service timestamps debug datetime msec
@@ -113,10 +113,10 @@ router isis
 router bgp 520
  bgp log-neighbor-changes
  network 192.168.102.0
- redistribute connected
  neighbor 10.0.0.24 remote-as 2042
  neighbor 10.1.0.24 remote-as 520
  neighbor 10.1.0.24 update-source Loopback1
+ neighbor 10.1.0.24 next-hop-self
 !
 ip forward-protocol nd
 !
